syntax = "proto3";

package go.micro.srv.PostUserAuth;

service Example {
    rpc PostUserAuth (Request) returns (Response) {
    }

}
//web--->srv
message Request {
    //真实姓名
    string real_name = 1;
    //身份证
    string id_card = 2;
    //sessionid
    string sessionid = 3;
}

//srv--->web
message Response {
    //错误吗
    string errno = 1;
    //错误信息
    string errmsg = 2;
}

